tests/machine/x/fs/map_in_operator.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/map_in_operator.fs(4,72): error FS0001: This expression was expected to have type
    string    
but here has type
    int    

/workspace/mochi/tests/machine/x/fs/map_in_operator.fs(4,82): error FS0001: This expression was expected to have type
    string    
but here has type
    int    

/workspace/mochi/tests/machine/x/fs/map_in_operator.fs(5,29): error FS0001: This expression was expected to have type
    string    
but here has type
    int    

/workspace/mochi/tests/machine/x/fs/map_in_operator.fs(6,29): error FS0001: This expression was expected to have type
    string    
but here has type
    int    
