tests/machine/x/fs/map_in_operator.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:27:41Z
open System

let m: System.Collections.Generic.IDictionary<string, string> = dict [(1, "a"); (2, "b")]
printfn "%b" (m.ContainsKey 1)
printfn "%b" (m.ContainsKey 3)
